[package]
name = "accountsdb-microbench"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[target.x86_64-unknown-linux-gnu]
linker = "lld"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]

[dependencies]
dashmap = "6.0.1"
memmap2 = "0.9.4"
solana-accounts-db = { git = "https://github.com/Lou-Kamades/solana.git", branch = "lou/public-accounts-db", features = ["dev-context-only-utils"] }
solana-sdk = { git = "https://github.com/Lou-Kamades/solana.git", branch = "lou/public-accounts-db", features = ["dev-context-only-utils"] }
