[package]
name = "accountsdb-microbench"
version = "0.1.0"
edition = "2021"

#[[bench]]
#name = "snapshot_load"
#harness = false

[profile.release]
debug = true

[target.x86_64-unknown-linux-gnu]
linker = "lld"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.11", features = ["derive"] }
crossbeam-channel = "0.5.13"
nix = "0.26.2"
num_cpus = "1.16.0"
rand = "0.8.5"

solana-accounts-db = { git = "https://github.com/Lou-Kamades/agave.git", branch = "lou/accounts-db-microbench", features = ["dev-context-only-utils"] }
solana-measure = { git = "https://github.com/Lou-Kamades/agave.git", branch = "lou/accounts-db-microbench" }
solana-runtime = { git = "https://github.com/Lou-Kamades/agave.git", branch = "lou/accounts-db-microbench" }
solana-sdk = { git = "https://github.com/Lou-Kamades/agave.git", branch = "lou/accounts-db-microbench", features = ["dev-context-only-utils"] }

[patch.crates-io]
solana-curve25519 = { git = "https://github.com/Lou-Kamades/agave.git", branch = "lou/accounts-db-microbench" }
solana-program = { git = "https://github.com/Lou-Kamades/agave.git", branch = "lou/accounts-db-microbench" }
solana-zk-sdk = { git = "https://github.com/Lou-Kamades/agave.git", branch = "lou/accounts-db-microbench" }
solana-zk-token-sdk = { git = "https://github.com/Lou-Kamades/agave.git", branch = "lou/accounts-db-microbench" }

[dev-dependencies]
criterion = "0.3"
